t/code/error/regressions/102.bel
LF tm : type =
    | zero : tm
    | succ : tm → tm
;

rec test : [⊢ tm] → [⊢ tm] =
/ total t (test t) /
test
;
