t/code/error/regressions/102.bel.out
File "./t/code/error/regressions/102.bel", line 8, column 1:
8 |test
   ^^^^
Error: Type-checking error.
       Recursive call not structurally smaller.
